sidebar spacing fixed on bottom

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -345,7 +345,7 @@ $green: #30b911;
 	}
 
 	.btn-sidebar {
-		margin-bottom: 100px;
+		margin-bottom: 60px;
 	}
 
 	.inverse {
